test/reverseDependent.slq
def f(n:!â„•,b:ğ”¹)mfree:ğ”¹^n{
	assert(n!=0);
	r:=vector(n,b);
	forget(b=r[0]);
	return r;
}
def main()â‡’reverse(f); /// error
